# Eth-ROS-Course

./: README.md  add_eclipse_to_catkin  extra
1Lecture/: program
1Lecture/Solution/: Exercise1.launch
2Lecture/Input/smb_highlevel_controller/: CMakeLists.txt  package.xml
2Lecture/Input/smb_highlevel_controller/include/smb_highlevel_controller/: SmbHighlevelController.hpp
2Lecture/Input/smb_highlevel_controller/src/: SmbHighlevelController.cpp
2Lecture/Solution/smb_highlevel_controller/: CMakeLists.txt  package.xml
2Lecture/Solution/smb_highlevel_controller/config/: default_parameters.yaml
2Lecture/Solution/smb_highlevel_controller/include/smb_highlevel_controller/: SmbHighlevelController.hpp
2Lecture/Solution/smb_highlevel_controller/launch/: smb_highlevel_controller.launch
2Lecture/Solution/smb_highlevel_controller/src/: SmbHighlevelController.cpp  smb_highlevel_controller_node.cpp
